fixed board member spacing

--- a/app/components/home1/BoardMembers.module.css
+++ b/app/components/home1/BoardMembers.module.css
@@ -2,9 +2,6 @@
   position: relative;
   padding: clamp(60px, 12vh, 12vh) 0;
   background-color: var(--color-white);
-  /* background-image: url("../../../public/home/bm-bg.png");
-  background-position: 10% top;
-  background-repeat: no-repeat; */
 }
 .bmRow {
   display: flex;
@@ -92,8 +89,5 @@
   }
   .bmCol2Inner {
     row-gap: clamp(10px, 1vh, 1vh);
-  }
-  .BoardMembers {
-    padding-bottom: 0 !important;
   }
 }
